# vktut

./: .clang-tidy  .gitignore  CMakeLists.txt  compile_shaders.sh
Include/vktut/hello_triangle/: application.hpp  application.hxx
Include/vktut/shaders/: uniform_buffer_object.hxx  vertex.hxx
Include/vktut/utilities/: files.hxx
Include/vktut/vulkan/: buffer_and_memory.hxx  buffer_utilities.hxx  debug.hpp  debug.hxx  image_and_memory.hpp  instance.hxx  queue_family_indices.hxx  swap_chain_support_details.hxx
Resources/Shaders/: basic.frag
Source/Executable/: main.cpp  main.cxx
chapter-0/: CMakeLists.txt  main.cpp  vk_engine.cpp  vk_engine.h  vk_initializers.cpp  vk_initializers.h  vk_pipeline.cpp  vk_pipeline.h
cmake/: FindGLM.cmake  Findglfw3.cmake  clang_format.cmake  config.hpp.cin  cppcheck.cmake  enumerate_all_sources.cmake
shaders/: colored_triangle.frag.glsl  colored_triangle.vert.glsl  triangle.frag.glsl  triangle.vert.glsl
